<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Icon at the top-right corner -->

    <ImageView
        android:id="@+id/icon_left"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/icon_right"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emoji_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/emoji"
        android:textSize="48dp"
        android:fontFamily="@font/gabarito"
        app:layout_constraintBottom_toTopOf="@+id/header_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:fontFamily="@font/gabarito"
        android:textColor="#000000"
        android:textSize="36dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gabarito"
        android:text="@string/sub_Heading"
        android:textAlignment="center"
        android:textColor="@color/silver"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_subtitle">

        <!-- List Item 1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/green">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="150dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/planting"
                        android:alpha=".8"/>

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gabarito"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd ="8dp"
                android:textSize="22dp"
                android:textColor="#000000"
                android:text="@string/planting_description"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <!-- List Item 2 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/green">


                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="150dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/solar"
                        android:alpha=".8"/>

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gabarito"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd ="8dp"
                android:textColor="#000000"
                android:text="@string/solar_description"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/green"
                app:cardElevation="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="150dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/stove"
                        android:alpha=".8" />


                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gabarito"
                android:gravity="center"
                android:textSize="22dp"
                android:paddingStart="8dp"
                android:textColor="#000000"
                android:paddingEnd ="8dp"
                android:text="@string/stove_description"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/centeredButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gabarito"
        android:padding="16dp"
        android:text="CONFIRM"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>